# shared-memory-poc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
ConsumerProcess/: CMakeLists.txt
ConsumerProcess/sources/: Consumer.cpp
ProducerProcess/: CMakeLists.txt
ProducerProcess/sources/: Producer.cpp
